--- a/weather_project.html
+++ b/weather_project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="weather_project.css"> 
+    <link rel="stylesheet" href="css/weather_project.css"> 
 </head>
 <body>
 
@@ -15,7 +15,7 @@
     <div id="loading" style="display: none;">Loading...</div>
 </div>
 
-<script src="weather_project.js"></script>
+<script src="js/weather_project.js"></script>
 
 </body>
 </html>
